--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Terry Yu Website</title>
+<meta name="google-site-verification" content="uMsW1oHd1mivTSh56OcB9yi9vG2Zq_O6Melq4fCgJmc" />
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <style>
 * {
