--- a/index.html
+++ b/index.html
@@ -75,37 +75,36 @@ h3 { margin : 16px}
 <body>
 
 <h3 class="section-title">TERRY YU WEBSITE</h3>
-<p>here's my website with random stuff I've made I don't really know how to code a website but whatever</p>
+<p>here's my website with random stuff I've made</p>
 
 <div class="row">
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Math Notes </h2>
-    <p> yohi </p>
+    <p> filler </p>
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Physics Notes </h2>
-    <p> hisup </p>
+    <p> filler </p>
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Handouts </h2>
-    <p> sup3 </p>
+    <p> filler </p>
   </div>
 </div>
 <p>test</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
-<p>hi</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+<p>filler</p>
+
 
 <div id="footer">
     <!-- <p>discord: ty#2234<span style = "float:right;">-ty1649</span></p> -->
