--- a/index.html
+++ b/index.html
@@ -80,7 +80,68 @@ h3 { margin : 16px}
 <div class="row">
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Math Notes </h2>
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/calc1.pdf"
+            >
+            Calculus 1 Equation Sheet</a>
+      </div>
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/calc2.pdf"
+            >
+            Calc 2 Notes (unfinished)</a>
+      </div>
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/calc3.pdf"
+            >
+            Calculus 3 Notes</a>
+      </div>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2 class = "box-title"> Physics Notes </h2>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/physics e&m.pdf"
+            >
+            Physics 4B: Electricity and Magnetism Notes (unfinished)</a>
+      </div> 
+    </p>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/hallidayresnickkrane.pdf"
+            >
+            Halliday Resnick Krane, 5th ed. Notes (unfinished)</a>
+      </div> 
+    </p>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/workenergyeqsheet.pdf"
+            >
+            Work and Energy Equation Sheet</a>
+      </div> 
+    </p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2 class = "box-title"> Handouts </h2>
     <p> filler </p>
+  </div>
+</div>
+<br>
+<div class="row">
+  <div class="column" style="background-color:#bbb;">
+    <h2 class = "box-title"> Math Notes </h2>
+    test
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Physics Notes </h2>
