--- a/index.html
+++ b/index.html
@@ -134,7 +134,15 @@ h3 { margin : 16px}
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2 class = "box-title"> Handouts </h2>
-    <p> filler </p>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="https://drive.google.com/file/d/1z0--yu9lg5hVvIBzy2a4tPojm5HerprM/view?usp=sharing"
+            >
+            Work and Energy Equation Sheet</a>
+      </div> 
+    </p>
   </div>
 </div>
 <br>
@@ -147,10 +155,7 @@ h3 { margin : 16px}
     <h2 class = "box-title"> Physics Notes </h2>
     <p> filler </p>
   </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Handouts </h2>
-    <p> filler </p>
-  </div>
+  
 </div>
 <p>test</p>
 <p>filler</p>
