--- a/index.html
+++ b/index.html
@@ -108,9 +108,18 @@ h3 { margin : 16px}
       <div class="member">
           <a
             target="_blank" 
-            href="notes/physics e&m.pdf"
+            href="notes/physics4b.pdf"
             >
             Physics 4B: Electricity and Magnetism Notes (unfinished)</a>
+      </div> 
+    </p>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="notes/physics4c.pdf"
+            >
+            Physics 4C: Thermodynamics, Waves, and Optics (in progress)</a>
       </div> 
     </p>
     <p> 
