--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>Terry Yu Website</title>
 <meta name="google-site-verification" content="-yAzYtsG5CNLvD299Sl787ZO6-siX4KiVmkEjEUNIMQ" />
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <style>
 * {
@@ -14,6 +13,7 @@
 p { margin:4px }
 h3 { margin : 16px}
 
+/* boxes */
 .column {
   float: left;
   width: 33%;
@@ -33,7 +33,7 @@ h3 { margin : 16px}
   color: rgb(0, 0, 0);
   text-align: center;
   text-decoration: underline;
-  font-weight: 400;
+  font-weight: 490;
 }
 
 .box-title {
@@ -43,15 +43,6 @@ h3 { margin : 16px}
   font-weight: 300;
   margin:10px;
 }
-
-/* #footer {
-    position: fixed;
-    padding: 7px 10px 0px 10px;
-    bottom: 10px;
-    width: 99%;
-    height: 30px;
-    background:#ddd
-} */
 
 .main {
   margin-left: 160px;
@@ -82,83 +73,52 @@ h3 { margin : 16px}
     text-align:right;
 }
 
+/* nav bar */
 .sidenav {
-  width: 90px;
+  width: 55px;
   position: fixed;
   z-index: 1;
-  bottom: 20px;
-  right: 10px;
+  bottom: 11px;
+  right: 13px;
   background: #eee;
   overflow-x: hidden;
-  padding: 8px 0;
+  padding: 7px 0;
 }
 
 .sidenav a {
-  padding: 1px 1px 1px 16px;
+  padding: 1px 11px 1px 7px;
   text-decoration: none;
-  /* font-size: 25px; */
+  text-align: right;
+  font-size: 13px;
   color: #000000;
   display: block;
 }
 
 .sidenav a:hover {
-  color: #064579;
-}
-
-.main {
-  margin-left: 140px; /* Same width as the sidebar + left position in px */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+  color: #0d528a;
+  /* text-decoration: underline; */
+  font-size: 14px;
 }
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-/* ---- */
-.bgimg-1 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
-  min-height: 100%;
-}
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-
-
 </style>
 </head>
+
 <body>
+<h1 class="section-title">TERRY YU WEBSITE</h1>
 
-
-​
-
-</style>
-</head>
-<body>
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
-  </div>
-</div>
-
-<h3 class="section-title">TERRY YU WEBSITE</h3>
 <p>here's my website with random stuff I've made</p>
-
 
 <div class="row">
   <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Math Notes </h2>
+    <h2 class = "box-title"> 1 </h2>
     test
   </div>
   <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Physics Notes </h2>
+    <h2 class = "box-title"> 2 </h2>
     <p> filler </p>
   </div>
   
@@ -187,7 +147,6 @@ h3 { margin : 16px}
       <a href="index.html">Home</a>
       <a href="/notes/">Notes</a>
       <a href="#clients">Blog</a>
-      <a href="#contact">Contact</a>
     </div>
          
     
