--- a/notes/index.html
+++ b/notes/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+
 <style>
 * {
   box-sizing: border-box;
@@ -11,6 +11,9 @@ h3 { margin : 16px}
 a:visited { 
  text-decoration: none; 
  color: blue; 
+}
+a:hover {
+  color:rgb(100, 100, 209);
 }
 
 .column {
@@ -28,15 +31,14 @@ a:visited {
 }
 
 .section-title {
-  font-size: 45px;
+  font-size: 37px;
   color: rgb(0, 0, 0);
   text-align: center;
-  text-decoration: underline;
   font-weight: 400;
 }
 
 .box-title {
-  font-size: 30px;
+  font-size: 27px;
   color: rgb(0, 0, 0);
   text-align: center;
   font-weight: 300;
@@ -71,33 +73,30 @@ a:visited {
     text-align:right;
 }
 
+/* nav bar */
 .sidenav {
-  width: 90px;
+  width: 55px;
   position: fixed;
   z-index: 1;
-  bottom: 20px;
-  right: 10px;
+  bottom: 11px;
+  right: 13px;
   background: #eee;
   overflow-x: hidden;
-  padding: 8px 0;
+  padding: 7px 0;
 }
 
 .sidenav a {
-  padding: 1px 1px 1px 16px;
+  padding: 1px 11px 1px 7px;
   text-decoration: none;
-  /* font-size: 25px; */
+  text-align: right;
+  font-size: 13px;
   color: #000000;
   display: block;
 }
 
 .sidenav a:hover {
-  color: #064579;
-}
-
-.main {
-  margin-left: 140px; /* Same width as the sidebar + left position in px */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+  color: #0d528a;
+  font-size: 14px;
 }
 
 @media screen and (max-height: 450px) {
@@ -107,20 +106,12 @@ a:visited {
 </style>
 </head>
 <body>
-
-
-​
-
-</style>
-</head>
-<body>
-
-<h3 class="section-title">TERRY YU WEBSITE</h3>
-<p>latexed notes for a couple of my classes:</p>
+<p class="section-title">Latexed Shit</p>
+<p>latexed notes and Handouts for various subjects and classes</p>
 
 <div class="row">
   <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Math Notes </h2>
+    <h2 class = "box-title"> Math </h2>
       <div class="member">
           <a
             target="_blank" 
@@ -144,7 +135,7 @@ a:visited {
       </div>
   </div>
   <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Physics Notes </h2>
+    <h2 class = "box-title"> Physics </h2>
     <p> 
       <div class="member">
           <a
@@ -211,12 +202,12 @@ a:visited {
   <div class="sidenav">
     <a href="/index.html">Home</a>
     <a href="/notes/">Notes</a>
-    <a href="#clients">Blog</a>
-    <a href="#contact">Contact</a>
+    <a href="/blog/">Blog</a>
   </div>
        
 
 
 </body>
 </html>
+
 
