--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ h3 { margin : 16px}
      <div class="sidenav">
       <a href="index.html">Home</a>
       <a href="/notes/">Notes</a>
-      <a href="#clients">Blog</a>
+      <a href="/blog/">Blog</a>
     </div>
          
     
