--- a/notes/index.html
+++ b/notes/index.html
@@ -158,9 +158,9 @@ a:hover {
       <div class="member">
           <a
             target="_blank" 
-            href="hallidayresnickkrane.pdf"
+            href="physics1.pdf"
             >
-            Halliday Resnick Krane, 5th ed. Notes (unfinished)</a>
+            Physics Notes, Pt 1 (Newton's Laws, Gravitation, Fluids, Waves, etc.)</a>
       </div> 
     </p>
     <p> 
