--- a/notes/index.html
+++ b/notes/index.html
@@ -140,9 +140,18 @@ a:hover {
       <div class="member">
           <a
             target="_blank" 
-            href="physics4b.pdf"
+            href="physics1.pdf"
             >
-            Physics 4B: Electricity and Magnetism Notes (unfinished)</a>
+            Physics Notes, Pt 1 (Newton's Laws, Gravitation, Fluids, Waves, etc.)</a>
+      </div> 
+    </p>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="physics2.pdf"
+            >
+            Physics Notes, Pt 2 (Electricity and Magnetism) (unfinished)</a>
       </div> 
     </p>
     <p> 
@@ -158,15 +167,6 @@ a:hover {
       <div class="member">
           <a
             target="_blank" 
-            href="physics1.pdf"
-            >
-            Physics Notes, Pt 1 (Newton's Laws, Gravitation, Fluids, Waves, etc.)</a>
-      </div> 
-    </p>
-    <p> 
-      <div class="member">
-          <a
-            target="_blank" 
             href="workenergyeqsheet.pdf"
             >
             Work and Energy Equation Sheet</a>
@@ -174,14 +174,14 @@ a:hover {
     </p>
   </div>
   <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Handouts </h2>
+    <h2 class = "box-title"> Computer Science </h2>
     <p> 
       <div class="member">
           <a
             target="_blank" 
             href="https://drive.google.com/file/d/1z0--yu9lg5hVvIBzy2a4tPojm5HerprM/view?usp=sharing"
             >
-            Inheritance APCS</a>
+            Inheritance APCS (Java) </a>
       </div> 
     </p>
   </div>
