--- a/notes/index.html
+++ b/notes/index.html
@@ -162,6 +162,18 @@ a:hover {
             >
             Physics 4C: Thermodynamics, Waves, and Optics (in progress)</a>
       </div> 
+   </p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2 class = "box-title"> Random Handouts </h2>
+    <p> 
+      <div class="member">
+          <a
+            target="_blank" 
+            href="https://drive.google.com/file/d/1z0--yu9lg5hVvIBzy2a4tPojm5HerprM/view?usp=sharing"
+            >
+            Inheritance APCS (Java) </a>
+      </div> 
     </p>
     <p> 
       <div class="member">
@@ -170,18 +182,6 @@ a:hover {
             href="workenergyeqsheet.pdf"
             >
             Work and Energy Equation Sheet</a>
-      </div> 
-    </p>
-  </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2 class = "box-title"> Computer Science </h2>
-    <p> 
-      <div class="member">
-          <a
-            target="_blank" 
-            href="https://drive.google.com/file/d/1z0--yu9lg5hVvIBzy2a4tPojm5HerprM/view?usp=sharing"
-            >
-            Inheritance APCS (Java) </a>
       </div> 
     </p>
   </div>
