--- a/projects/index.html
+++ b/projects/index.html
@@ -58,8 +58,8 @@
     
     <div class="sidenav">
         <a href="/index.html">Home</a>
+        <a href="/projects/">Projects</a>
         <a href="/notes/">Notes</a>
-        <a href="/blog/">Blog</a>
     </div>
 </body>
 </html>
