--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .section-title {
             font-size: 24px;
             margin-bottom: 10px;
-            font-weight: normal;
+            font-weight: bold;
         }
 
         .subtitle {
@@ -114,7 +114,13 @@
         .about-section a:hover {
             text-decoration: underline;
         }
-  
+
+        .about-title {
+            font-size: 16px;
+            margin-bottom: 20px;
+            font-weight: Medium;
+        }
+
         .about-content {
             font-size: 14px;
             max-width: 600px;
