--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
             font-size: 24px;
             margin-bottom: 10px;
             font-weight: bold;
+            align-items: center;
+            text-align: center;
         }
 
         .subtitle {
+            align-items: center;
+            text-align: center;
             font-size: 14px;
         }
 
