--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Terry Yu's portfolio website featuring mechanical engineering projects and class notes">
     <style>
+        :root {
+            --bg-color-light: #ffffff;
+            --text-color-light: #000000;
+            --bg-color-dark: #121212;
+            --text-color-dark: #ffffff;
+            --border-color: #000;
+            --line-color-light: #000000;
+            --line-color-dark: #ffffff;
+        }
+
+        body {
+            background-color: var(--bg-color-light);
+            color: var(--text-color-light);
+            padding: 40px;
+            padding-left: 100px;
+            max-width: 1200px;
+            margin: 0 auto;
+            line-height: 1.5;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        body.dark-mode {
+            background-color: var(--bg-color-dark);
+            color: var(--text-color-dark);
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -14,55 +40,115 @@
             font-family: Georgia, Garamond;
         }
 
-        body {
-            padding: 40px;
-            padding-left: 100px;
-            max-width: 1200px;
-            margin: 0 auto;
-            line-height: 1.5;
-        }
-
         /* Header */
         .header {
             margin-bottom: 40px;
-            border-bottom: 1px solid #000;
+            border-bottom: 1px solid var(--line-color-light);
             padding-bottom: 20px;
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            transition: border-color 0.3s;
+        }
+
+        body.dark-mode .header {
+            border-bottom-color: var(--line-color-dark);
+        }
+
+        .header-text {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid var(--border-color);
+            transition: border-color 0.3s, border-width 0.3s;
+        }
+
+        body.dark-mode .profile-photo {
+            border-color: var(--line-color-dark);
+            border-width: 2px;
         }
 
         .section-title {
             font-size: 24px;
-            margin-bottom: 10px;
+            margin-bottom: 1px;
             font-weight: bold;
-            align-items: center;
-            text-align: center;
         }
 
-        .subtitle {
-            align-items: center;
-            text-align: center;
-            font-size: 14px;
+        /* Toggle Button */
+        .theme-toggle {
+            position: absolute;
+            top: 20px;
+            cursor: pointer;
+            background-color: var(--bg-color-light);
+            color: var(--text-color-light);
+            font-size: 16px;
+            /* border: none; */
+            border: 1px solid var(--line-color-light);
+            padding: 8px 12px;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
         }
 
-        /* Content Grid */
+        .theme-toggle.hover {
+            transform: rotate(10deg);
+        }
+
+        .theme-toggle.clicked {
+            transform: scale(1.1);
+        }
+
+        .theme-toggle.dark-mode {
+            background-color: var(--bg-color-dark);
+            color: var(--text-color-dark);
+        }
+
+        /* Social Icons */
+        .social-icons {
+            display: flex;
+            gap: 5px;
+        }
+
+        .social-icons a {
+            color: var(--text-color-light);
+            text-decoration: none;
+            transition: all 0.2s ease;
+            display: flex;
+            align-items: center;
+            opacity: 0.7;
+        }
+
+        body.dark-mode .social-icons a {
+            color: var(--text-color-dark);
+        }
+
+        .social-icons a:hover {
+            transform: translateY(-2px);
+            opacity: 1;
+        }
+
+        .social-icons svg {
+            width: 18px;
+            height: 18px;
+            stroke-width: 1.5;
+        }
+
         .row {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             margin-bottom: 40px;
         }
-/* 
+
         .column {
-            border: 1px solid #000;
-            padding: 20px;
-            min-height: 200px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        } */
-        .column {
-            border: 1px solid #000;
+            border: 1px solid var(--line-color-light);
             padding: 20px;
             min-height: 200px;
             display: flex;
@@ -76,47 +162,43 @@
          .column:hover {
             transform: scale(1.05);
             background-color: #f0f0f0;
-            text-decoration: underline;
          }
 
-          .column-link {
+         .column:active {
+            transform: scale(1.3);
+         }
+
+         body.dark-mode .column {
+            border-color: var(--line-color-dark); 
+         }
+
+         body.dark-mode .column:hover {
+            transform: scale(1.05);
+            background-color: #2a2a2a;
+         }
+
+         .column-link {
             display: block;
             text-decoration: none;
             color: inherit;
           }
 
-          .column-link .column {
-            height: 100%;
-          }
-
-          .column-link .box-title {
-              text-decoration: none;
-          }
-
-        .box-title {
+          .box-title {
             font-size: 16px;
             margin-bottom: 15px;
             font-weight: normal;
             text-align: center;
         }
 
-        /* About Section */
         .about-section {
             margin: 40px 0;
             padding: 40px 0;
-            border-top: 1px solid #000;
-        }
-        .about-section a {
-            color: blue; 
-            text-decoration: none; 
+            border-top: 1px solid var(--line-color-light);
+            transition: border-color 0.3s;
         }
 
-        .about-section a:visited {
-            color: blue; 
-        }
-
-        .about-section a:hover {
-            text-decoration: underline;
+        body.dark-mode .about-section {
+            border-top-color: var(--line-color-dark);
         }
 
         .about-title {
@@ -130,47 +212,79 @@
             max-width: 600px;
         }
 
-        /* Navigation */
         .sidenav {
             position: fixed;
             top: 0;
             left: 0;
             height: 100%;
             width: 60px;
-            border-right: 1px solid #000;
+            border-right: 1px solid var(--line-color-light);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             gap: 30px;
-            background: #fff;
+            background: var(--bg-color-light);
+        }
+
+        body.dark-mode .sidenav {
+            background-color: var(--bg-color-dark);
+            border-right-color: var(--line-color-dark);
         }
 
         .sidenav a {
             writing-mode: vertical-rl;
             transform: rotate(180deg);
             text-decoration: none;
-            color: #000;
+            color: var(--text-color-light);
             font-size: 14px;
+        }
+
+        body.dark-mode .sidenav a {
+            color: var(--text-color-dark);
         }
 
         .sidenav a:hover {
             text-decoration: underline;
+            transform: scale(-1.1);
         }
 
-        /* Footer */
         .footer {
             margin-top: 40px;
             padding-top: 20px;
-            border-top: 1px solid #000;
+            border-top: 1px solid var(--line-color-light);
             font-size: 14px;
+            transition: border-color 0.3s;
         }
 
-        /* Responsive Design */
+        body.dark-mode .footer {
+            border-top-color: var(--line-color-dark);
+        }
+
+
         @media screen and (max-width: 768px) {
             body {
                 padding: 20px;
                 padding-bottom: 80px;
+            }
+
+            .header {
+                flex-direction: column;
+                text-align: center;
+                gap: 20px;
+            }
+
+            .header-text {
+                align-items: center;
+            }
+
+            .profile-photo {
+                width: 120px;
+                height: 120px;
+            }
+
+            .social-icons {
+                justify-content: center;
             }
 
             .row {
@@ -185,20 +299,52 @@
                 left: 0;
                 flex-direction: row;
                 border-right: none;
-                border-top: 1px solid #000;
+                border-top: 1px solid var(--border-color);
             }
 
             .sidenav a {
                 writing-mode: horizontal-tb;
                 transform: none;
             }
+
+            .theme-toggle {
+                right: 20px;
+                top: 10px;
+            }
         }
     </style>
 </head>
 <body>
     <header class="header">
-        <h1 class="section-title">TERRY YU</h1>
-        <p class="subtitle">Mechanical Engineering at UCLA</p>
+        <img src="/path/to/your-photo.jpg" alt="Terry Yu" class="profile-photo">
+        <div class="header-text">
+            <h1 class="section-title">TERRY YU</h1>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/terryyu05/" target="_blank" title="LinkedIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                        <rect x="2" y="9" width="4" height="12"></rect>
+                        <circle cx="4" cy="4" r="2"></circle>
+                    </svg>
+                </a>
+                <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                    </svg>
+                </a>
+                <a href="mailto:terryyu05@gmail.com" title="Email">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="2" y="4" width="20" height="16" rx="2"></rect>
+                        <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                    </svg>
+                </a>
+                <a href="tel:6692816222" title="Phone">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -214,15 +360,6 @@
         </div>
 
         <section class="about-section">
-          <h2 class="about-title">CONTACT</h2>
-          <div class="about-content">
-              <p>Email: <a href="mailto: terryyu05@gmail.com" class="contact-link">terryyu05@gmail.com</a></p>
-              <p>Linkedin: <a href="https://www.linkedin.com/in/terryyu05/">linkedin.com/in/terryyu05/</a></p>
-              <p>Phone: <a href="tel:6692816222">(669) 281-6222</a></p>
-          </div>
-      </section>
-
-        <section class="about-section">
             <h2 class="about-title">ABOUT</h2>
             <div class="about-content">
                 <p>Mechanical engineering student focused on mechatronics and cars.</p>
@@ -232,6 +369,7 @@
     </main>
 
     <nav class="sidenav">
+        <button class="theme-toggle" id="theme-toggle">🌞</button>
         <a href="index.html">HOME</a>
         <a href="/projects/">PROJECTS</a>
         <a href="/notes/">NOTES</a>
@@ -240,6 +378,61 @@
     <footer class="footer">
         <p>© 2024 Terry Yu</p>
     </footer>
+
+    <script>
+
+        const toggleButton = document.getElementById('theme-toggle');
+        const body = document.body;
+        let cantoggle = true;
+
+        toggleButton.addEventListener('click', () => {
+            // body.classList.toggle('dark-mode');
+
+            // if (body.classList.contains('dark-mode')) {
+            //     toggleButton.textContent = '🌚';
+            // } else {
+            //     toggleButton.textContent = '🌞';
+            // }
+            toggleButton.classList.add('clicked');
+            setTimeout(() => {
+                toggleButton.classList.remove('clicked');
+            }, 100);
+            setTimeout(() => {
+                toggleButton.classList.remove('hover');
+            }, 160);
+
+            cantoggle = false;
+        });
+        toggleButton.addEventListener('mouseover', () => {
+            toggleButton.classList.add('hover');
+
+            if(cantoggle) {
+                body.classList.toggle('dark-mode');
+
+                if (body.classList.contains('dark-mode')) {
+                    toggleButton.textContent = '🌚';
+                } else {
+                    toggleButton.textContent = '🌞';
+                }
+            }
+        });
+        toggleButton.addEventListener('mouseout', () => {    
+            if(cantoggle) {
+                body.classList.toggle('dark-mode');
+
+                if (body.classList.contains('dark-mode')) {
+                    toggleButton.textContent = '🌚';
+                } else {
+                    toggleButton.textContent = '🌞';
+                }
+            } else {
+                setTimeout(() => {
+                    toggleButton.classList.remove('hover');
+                }, 100);
+            }
+            
+            cantoggle = true;
+        });
+    </script>
 </body>
 </html>
-
