--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
             background-color: #2a2a2a;
          }
 
+         body.dark-mode .column:active {
+            transform: scale(1.3);
+         }
+
          .column-link {
             display: block;
             text-decoration: none;
@@ -430,7 +434,7 @@
                     toggleButton.classList.remove('hover');
                 }, 100);
             }
-            
+
             cantoggle = true;
         });
     </script>
