--- a/index.html
+++ b/index.html
@@ -354,10 +354,12 @@
 
     <main>
         <div class="row">
-            <div class="column">
-                <h2 class="box-title">PROJECTS</h2>
-            </div>
-          <a href="/notes/index.html" class="column-link">
+            <a href="/projects/" class="column-link">
+                <div class="column">
+                    <h2 class="box-title">PROJECTS</h2>
+                </div>
+            </a>
+          <a href="/notes/" class="column-link">
             <div class="column">
                 <h2 class="box-title">NOTES</h2>
             </div>
@@ -375,7 +377,7 @@
 
     <nav class="sidenav">
         <button class="theme-toggle" id="theme-toggle">🌞</button>
-        <a href="index.html">HOME</a>
+        <a href="">HOME</a>
         <a href="/projects/">PROJECTS</a>
         <a href="/notes/">NOTES</a>
     </nav>
