--- a/projects/index.html
+++ b/projects/index.html
@@ -1,65 +1,443 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
+    <meta charset="UTF-8">
+    <title>Terry Yu | Projects</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Terry Yu's portfolio projects showcasing mechanical engineering work and other projects.">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <style>
+      :root {
+          --bg-color-light: #ffffff;
+          --text-color-light: #000000;
+          --bg-color-dark: #121212;
+          --text-color-dark: #ffffff;
+          --border-color: #000;
+          --line-color-light: #000000;
+          --line-color-dark: #ffffff;
+      }
 
-/* nav bar */
-.sidenav {
-  width: 55px;
-  position: fixed;
-  z-index: 1;
-  bottom: 11px;
-  right: 13px;
-  background: #eee;
-  overflow-x: hidden;
-  padding: 7px 0;
-}
+      body {
+          background-color: var(--bg-color-light);
+          color: var(--text-color-light);
+          padding: 40px;
+          padding-left: 100px;
+          max-width: 1200px;
+          margin: 0 auto;
+          line-height: 1.5;
+          transition: background-color 0.3s, color 0.3s;
+      }
 
-.sidenav a {
-  padding: 1px 11px 1px 7px;
-  text-decoration: none;
-  text-align: right;
-  font-size: 13px;
-  color: #000000;
-  display: block;
-}
+      body.dark-mode {
+          background-color: var(--bg-color-dark);
+          color: var(--text-color-dark);
+      }
 
-.sidenav a:hover {
-  color: #0d528a;
-  font-size: 14px;
-}
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          font-family: Georgia, Garamond;
+      }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-/* tweetbody */
-.tweet-body {
-    
-}
+      /* Header */
+      .header {
+          margin-bottom: 40px;
+          border-bottom: 1px solid var(--line-color-light);
+          padding-bottom: 20px;
+          display: flex;
+          align-items: center;
+          gap: 40px;
+          transition: border-color 0.3s;
+      }
 
-.tweet-body textarea{
-    overflow: scroll;
-    resize: none;
-    /* margin-top: 40px; */
-    /* height: 80px; */
-    /* border: 1px solid red; */
-    border-radius: 2px;
-    padding: 4px;
-    font-size: 11px;
-}
-</style>
+      body.dark-mode .header {
+          border-bottom-color: var(--line-color-dark);
+      }
+
+      .header-text {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+      }
+
+      .profile-photo {
+          width: 150px;
+          height: 150px;
+          border-radius: 50%;
+          object-fit: cover;
+          border: 2px solid var(--border-color);
+          transition: border-color 0.3s, border-width 0.3s;
+      }
+
+      body.dark-mode .profile-photo {
+          border-color: var(--line-color-dark);
+          border-width: 2px;
+      }
+
+      .section-title {
+          font-size: 24px;
+          margin-bottom: 20px; /* Adjusted margin for better spacing */
+          font-weight: bold;
+      }
+
+      /* Toggle Button */
+      .theme-toggle {
+          position: absolute;
+          top: 20px;
+          cursor: pointer;
+          background-color: var(--bg-color-light);
+          color: var(--text-color-light);
+          font-size: 16px;
+          border: 1px solid var(--line-color-light);
+          padding: 8px 12px;
+          border-radius: 5px;
+          transition: background-color 0.3s, color 0.3s;
+      }
+
+      .theme-toggle.hover {
+          transform: rotate(10deg);
+          transition: transform 0.3s ease, background-color 0.3s ease;
+      }
+
+      .theme-toggle.clicked {
+          transform: scale(1.3);
+      }
+
+      .theme-toggle.dark-mode {
+          background-color: var(--bg-color-dark);
+          color: var(--text-color-dark);
+      }
+
+      /* Social Icons */
+      .social-icons {
+          display: flex;
+          gap: 5px;
+      }
+
+      .social-icons a {
+          color: var(--text-color-light);
+          text-decoration: none;
+          transition: all 0.2s ease;
+          display: flex;
+          align-items: center;
+          opacity: 0.7;
+      }
+
+      body.dark-mode .social-icons a {
+          color: var(--text-color-dark);
+      }
+
+      .social-icons a:hover {
+          transform: translateY(-2px);
+          opacity: 1;
+      }
+
+      .social-icons svg {
+          width: 18px;
+          height: 18px;
+          stroke-width: 1.5;
+      }
+
+      .row {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          gap: 20px;
+          margin-bottom: 40px;
+      }
+
+      .column {
+          border: 1px solid var(--line-color-light);
+          padding: 20px;
+          min-height: 200px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          transition: transform 0.3s ease;
+          background-size: cover;
+          background-position: center; 
+      }
+
+      .column:hover {
+          transform: scale(1.05);
+      }
+
+      body.dark-mode .column {
+          border-color: var(--line-color-dark); 
+      }
+
+      body.dark-mode .column:hover {
+          transform: scale(1.05);
+      }
+
+      .column-link {
+          display: block;
+          text-decoration: none;
+          color: inherit;
+      }
+
+      .box-title {
+          font-size: 16px;
+          margin-bottom: 15px;
+          font-weight: normal;
+          text-align: center;
+      }
+
+      .tags {
+          display: flex;
+          justify-content: center;
+          gap: 10px; /* Space between tags */
+          margin-top: 10px; /* Margin above tags */
+      }
+
+      .tag {
+          background-color: #e0e0e0; /* Tag background color */
+          border-radius: 5px; /* Rounded corners */
+          padding: 5px 10px; /* Padding for tags */
+          font-size: 12px; /* Font size for tags */
+      }
+
+      .about-section {
+          margin: 40px 0;
+          padding: 40px 0;
+          border-top: 1px solid var(--line-color-light);
+          transition: border-color 0.3s;
+      }
+
+      body.dark-mode .about-section {
+          border-top-color: var(--line-color-dark);
+      }
+
+      .about-title {
+          font-size: 16px;
+          margin-bottom: 20px;
+          font-weight: Medium;
+      }
+
+      .about-content {
+          font-size: 14px;
+          max-width: 600px;
+      }
+
+      .sidenav {
+          position: fixed;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 60px;
+          border-right: 1px solid var(--line-color-light);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 30px;
+          background: var(--bg-color-light);
+      }
+
+      body.dark-mode .sidenav {
+          background-color: var(--bg-color-dark);
+          border-right-color: var(--line-color-dark);
+      }
+
+      .sidenav a {
+          writing-mode: vertical-rl;
+          transform: rotate(180deg);
+          text-decoration: none;
+          color: var(--text-color-light);
+          font-size: 14px;
+      }
+
+      body.dark-mode .sidenav a {
+          color: var(--text-color-dark);
+      }
+
+      .sidenav a:hover {
+          text-decoration: underline;
+          transform: scale(-1.1);
+      }
+
+      .footer {
+          margin-top: 40px;
+          padding-top: 20px;
+          border-top: 1px solid var(--line-color-light);
+          font-size: 14px;
+          transition: border-color 0.3s;
+      }
+
+      body.dark-mode .footer {
+          border-top-color: var(--line-color-dark);
+      }
+
+      @media screen and (max-width: 768px) {
+          body {
+              padding: 20px;
+              padding-bottom: 80px;
+          }
+
+          .header {
+              flex-direction: column;
+              text-align: center;
+              gap: 20px;
+          }
+
+          .header-text {
+              align-items: center;
+          }
+
+          .profile-photo {
+              width: 120px;
+              height: 120px;
+          }
+
+          .social-icons {
+              justify-content: center;
+          }
+
+          .row {
+              grid-template-columns: 1fr;
+          }
+
+          .sidenav {
+              height: 60px;
+              width: 100%;
+              bottom: 0;
+              top: auto;
+              left: 0;
+              flex-direction: row;
+              border-right: none;
+              border-top: 1px solid var(--border-color);
+          }
+
+          .sidenav a {
+              writing-mode: horizontal-tb;
+              transform: none;
+          }
+
+          .theme-toggle {
+              right: 20px;
+              top: 10px;
+          }
+      }
+  </style>
 </head>
 <body>
-    <div class="tweet-body"> 
-        <form method="post" enctype="multipart/form-data"> 
-        <textarea class="status" name="status" placeholder="Write your post here!" rows="4" cols="50"></textarea> 
-    </div> 
+    <header class="header">
+        <div class="header-text">
+            <h1 class="section-title">Projects</h1> <!-- Bold title for the Projects page -->
+        </div>
+    </header>
     
-    <div class="sidenav">
-        <a href="/index.html">Home</a>
-        <a href="/projects/">Projects</a>
-        <a href="/notes/">Notes</a>
-    </div>
+    <main>
+        <div class="row">
+            <div class="column" style="background-image: url('/images/proj1.png');">
+                <h2 class="box-title">Project 1</h2>
+                <p>Brief description of Project 1. Highlight key features, technologies used, and your role in the project.</p>
+                <div class="tags">
+                    <span class="tag">Coding</span>
+                    <span class="tag">Electronics</span>
+                </div>
+                <a href="link-to-your-project1.html" class="column-link">View Project</a>
+            </div>
+            <div class="column" style="background-image: url('path-to-your-image2.jpg');">
+                <h2 class="box-title">Project 2</h2>
+                <p>Brief description of Project 2. Highlight key features, technologies used, and your role in the project.</p>
+                <div class="tags">
+                    <span class="tag">Mechanical Engineering</span>
+                    <span class="tag">Coding</span>
+                </div>
+                <a href="link-to-your-project2.html" class="column-link">View Project</a>
+            </div>
+            <div class="column" style="background-image: url('path-to-your-image3.jpg');">
+                <h2 class="box-title">Project 3</h2>
+                <p>Brief description of Project 3. Highlight key features, technologies used, and your role in the project.</p>
+                <div class="tags">
+                    <span class="tag">Electronics</span>
+                    <span class="tag">Mechanical Engineering</span>
+                </div>
+                <a href="link-to-your-project3.html" class="column-link">View Project</a>
+            </div>
+            <div class="column" style="background-image: url('path-to-your-image4.jpg');">
+                <h2 class="box-title">Project 4</h2>
+                <p>Brief description of Project 4. Highlight key features, technologies used, and your role in the project.</p>
+                <div class="tags">
+                    <span class="tag">Coding</span>
+                    <span class="tag">Electronics</span>
+                    <span class="tag">Mechanical Engineering</span>
+                </div>
+                <a href="link-to-your-project4.html" class="column-link">View Project</a>
+            </div>
+            <!-- Add more project columns as needed -->
+        </div>
+    </main>
+
+    <nav class="sidenav">
+        <button class="theme-toggle" id="theme-toggle">🌞</button>
+        <a href="../">HOME</a>
+        <a href="/projects/">PROJECTS</a>
+        <a href="/notes/">NOTES</a>
+    </nav>
+
+    <footer class="footer">
+        <p>© 2024 Terry Yu</p>
+    </footer>
+
+    <script>
+
+      const toggleButton = document.getElementById('theme-toggle');
+      const body = document.body;
+      let cantoggle = true;
+
+      toggleButton.addEventListener('click', () => {
+          // body.classList.toggle('dark-mode');
+
+          // if (body.classList.contains('dark-mode')) {
+          //     toggleButton.textContent = '🌚';
+          // } else {
+          //     toggleButton.textContent = '🌞';
+          // }
+          toggleButton.classList.add('clicked');
+          setTimeout(() => {
+              toggleButton.classList.remove('clicked');
+          }, 100);
+          setTimeout(() => {
+              toggleButton.classList.remove('hover');
+          }, 160);
+
+          cantoggle = false;
+      });
+      toggleButton.addEventListener('mouseover', () => {
+          toggleButton.classList.add('hover');
+
+          if(cantoggle) {
+              body.classList.toggle('dark-mode');
+
+              if (body.classList.contains('dark-mode')) {
+                  toggleButton.textContent = '🌚';
+              } else {
+                  toggleButton.textContent = '🌞';
+              }
+          }
+      });
+      toggleButton.addEventListener('mouseout', () => {    
+          if(cantoggle) {
+              body.classList.toggle('dark-mode');
+
+              if (body.classList.contains('dark-mode')) {
+                  toggleButton.textContent = '🌚';
+              } else {
+                  toggleButton.textContent = '🌞';
+              }
+          }
+
+          setTimeout(() => {
+                  toggleButton.classList.remove('hover');
+              }, 100);
+
+          cantoggle = true;
+      });
+  </script>
 </body>
 </html>
