--- a/projects/index.html
+++ b/projects/index.html
@@ -35,6 +35,12 @@
             background-color: var(--bg-color-dark);
             color: var(--text-color-dark);
         }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Georgia, Garamond;
+        }
 
         .section-title {
             font-size: 24px;
@@ -328,7 +334,7 @@
         <h1 class="section-title">PROJECTS</h1>
         
         <div class="filter-container">
-            <button class="filter-button fsae active" data-category="fsae">Formula SAE</button>
+            <button class="filter-button fsae" data-category="fsae">Formula SAE</button>
             <button class="filter-button supermileage" data-category="supermileage">Supermileage</button>
             <button class="filter-button personal" data-category="personal">Personal Projects</button>
         </div>
